# boston-bashed

./: CMakeLists.txt  README.md  include.h  main.cpp
attack_script/: CMakeLists.txt  main.cpp
attack_script/script/: attacks  cheat_sheet.txt  images  init
src/: macros.h  starting-ending.cpp  superfile.h
src/attacks/: attack.cpp  attack.h  attack_script.cpp  attack_script.h
src/font/: font.cpp  font.h
src/game/: box.cpp  box.h  global_scout_vars.h  heart.cpp  heart.h  scout.cpp  scout.h
src/game/buttons/: buttons.cpp  buttons.h
src/game/sounds/: sounds.cpp  sounds.h
src/rendering/: rendering.cpp  rendering.h
